.k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  labels:
    app: go-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      name: go-api-template
      labels:
        app: go-api
    spec:
      containers:
        - name: go-api-app
          image: go-api-samp
          imagePullPolicy: Never
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
              cpu: 250m
          ports:
            - name: api-port
              protocol: TCP
              containerPort: 8080
