.k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-api-ingress
  labels:
    app: go-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "((patch))" # patchでのreplace
      http:
        paths:
          - path: /
            backend:
              serviceName: go-api-service
              servicePort: 80
